# Perth

./: .gitignore  pyproject.toml  requirements.txt
examples/advanced/: pyproject.toml
examples/basic/: pyproject.toml
src/perth/: __init__.py
src/perth/perth_net/perth_net_implicit/: perth_watermarker.py
tests/: pyproject.toml
