[project]
name = "perth"
version = "0.1.0"
description = "Resemble-ai's watermarking tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "bitstring>=4.3.1",
  "librosa>=0.7.2",
  "matplotlib>=3.10.7",
  "numpy>=1.23.4,<2",
  "pandas>=1.1.5",
  "pillow>=9.0.1",
  "praat-parselmouth>=0.4.6",
  "pydub>=0.25.1",
  "pyloudnorm>=0.1.0",
  "pyrubberband>=0.4.0",
  "pywavelets>=1.1.1",
  "pyyaml>=5.4.1",
  "scikit-learn>=0.22",
  "soundfile>=0.10.3.post1",
  "sox>=1.4.0",
  "tabulate>=0.8.9",
  "tensorboard>=2.10.1",
  "torch==2.1.1",
  "torchaudio==2.1.1",
  "tqdm>=4.61.2",
]

[tool.uv.sources]
perht = { path = "./perth" }

[tool.uv.workspace]
members = [
    "examples/basic",
    "examples/advanced",
]
